--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -20,9 +20,14 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
 
       - name: Install dependencies
-        run: npm ci
+        run: | 
+          cd frontend 
+          npm ci
 
       - name: Build project
-        run: npm run build
+        run: | 
+          cd frontend 
+          npm run build
