--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -1,4 +1,4 @@
-name: Frontend Build Check
+name: Frontend
 
 on:
   push:
@@ -31,3 +31,28 @@ jobs:
         run: | 
           cd frontend 
           npm run build
+
+  lint:
+    name: Linter Check
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install dependencies
+        run: | 
+          cd frontend 
+          npm ci
+
+      - name: Build project
+        run: | 
+          cd frontend 
+          eslint . --ext .ts,.tsx -c .eslintrc.json --max-warnings=0 .
