--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,13 +28,16 @@
     "@heroui/system": "2.4.6",
     "@heroui/theme": "2.4.5",
     "@react-aria/visually-hidden": "3.8.18",
+    "axios": "^1.7.9",
     "clsx": "2.1.1",
+    "dotenv": "^16.4.7",
     "framer-motion": "11.13.1",
     "intl-messageformat": "^10.5.0",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "20.5.7",
@@ -53,9 +56,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "4.1.4",
     "postcss": "8.4.49",
+    "prettier": "3.3.3",
     "tailwind-variants": "0.1.20",
     "tailwindcss": "3.4.16",
-    "typescript": "5.6.3",
-    "prettier": "3.3.3"
+    "typescript": "5.6.3"
   }
 }
